css/style.css
/* ... */
  .owl-custom-nav .owl-custom-prev,
  .owl-custom-nav .owl-custom-next {
    padding: 10px;
    font-size: 30px;
    background: #ccc;
    line-height: 0;
    width: 60px;
    text-align: center;
    display: inline-block; }

.bg-primary {
  background: #2f89fc; }

.btn {
  cursor: pointer;
  border-radius: 0px;
  -webkit-box-shadow: none !important;
  box-shadow: none !important; }
  .btn:hover, .btn:active, .btn:focus {
    outline: none; }
  .btn.btn-primary {
    background: #1f1f1f;
    border: 1px solid #121212;
    color: #fff; }
    .btn.btn-primary:hover {
      border: 1px solid #121212;
      background: transparent;
      color: #121212; }
    .btn.btn-primary.btn-outline-primary {
      border: 1px solid #2f89fc;
      background: transparent;
      color: #2f89fc; }
      .btn.btn-primary.btn-outline-primary:hover {
        border: 1px solid transparent;
        background: #121212;
        color: #fff; }
  .btn.btn-outline-white {
    border-color: rgba(255, 255, 255, 0.8);
    background: none;
    border-radius: 0px;
    border-width: 2px; }
    .btn.btn-outline-white:hover, .btn.btn-outline-white:focus, .btn.btn-outline-white:active {
      background: #fff;
      border-color: #fff;
      color: #121212; }

.about-section h2 {
  font-weight: 300;
  letter-spacing: 1px; }

@media (max-width: 767.98px) {
  .about-section .author-img {
    display: block;
    height: 300px; } }

.wrap {
  padding: 0; }
  @media (max-width: 767.98px) {
    .wrap {
      margin-top: 40px; } }
  @media (min-width: 768px) {
    .wrap .about-desc {
      position: relative; } }
  .wrap .about-desc .bold-text {
    position: absolute;
    top: -80px;
    left: -50px;
    right: 0;
    bottom: 0;
    font-weight: 700 !important;
    color: rgba(255, 255, 255, 0.08);
    text-transform: uppercase; 
    z-index: -1;}
    @media (min-width: 992px) {
      .wrap .about-desc .bold-text {
        font-size: 10em; } }
    @media (max-width: 991.98px) {
      .wrap .about-desc .bold-text {
        display: none; } }
    @media (max-width: 767.98px) {
      .wrap .about-desc .bold-text {
        display: none; } }

.profile {
  margin-bottom: 5em; }
  .profile p strong {
    color: #fff;
    font-weight: 400; }

.exp {
  width: 100%;
  float: left;
  margin-bottom: 3em; }

.exp-wrap {
  width: 100%;
  border-bottom: 1px solid #1a1a1a;
  float: left; }
  .exp-wrap .desc, .exp-wrap .year {
    float: left; }
  .exp-wrap .desc {
    width: calc(100% - 150px); }
    .exp-wrap .desc h4 span {
      color: #8c8c8c;
      font-weight: 300; }
    .exp-wrap .desc .location {
      margin-bottom: 0; }
  .exp-wrap .year {
    width: 150px; }

.progress-wrap {
  margin-bottom: 30px; }
  .progress-wrap h4 {
    font-size: 20px;
    margin-bottom: 10px; }

.progress {
  height: 4px;
  -webkit-box-shadow: none;
  box-shadow: none;
  background: #1f1f1f;
  overflow: visible;
  border-radius: 0; }

.progress-bar {
  background: #2f89fc;
  -webkit-box-shadow: none;
  box-shadow: none;
  line-height: 1.2;
  color: #121212;
  font-weight: 400;
  text-align: right;
  position: relative;
  overflow: visible;
  border-radius: 30px; }
  .progress-bar:after {
    position: absolute;
    top: -3px;
    right: 0;
    width: 10px;
    height: 10px;
    content: '';
    background: #2f89fc;
    border-radius: 50%; }
  .progress-bar span {
    position: absolute;
    top: -34px;
    right: 0;
    color: #6c757d; }
  .progress-bar.color-1 {
    background: #2f89fc; }
    .progress-bar.color-1:after {
      background: #2f89fc; }

.services {
  position: relative; }
  .services .icon span {
    position: relative;
    color: #2f89fc;
    font-size: 40px;
    z-index: 0;
    line-height: 1.5; }
  .services .media-body .heading {
    font-size: 22px; }

.form-group label {
  color: #fff; }

.form-control {
  height: 52px !important;
  background: transparent !important;
  color: #858585 !important;
  font-size: 18px;
  border-radius: 0px;
  -webkit-box-shadow: none !important;
  box-shadow: none !important;
  border: 1px solid #2c2c2c; }
  .form-control:focus, .form-control:active {
    border-color: #4d4d4d; }

textarea.form-control {
  height: inherit !important; }

.ftco-vh-100 {
  height: 100vh; }
  @media (max-width: 1199.98px) {
    .ftco-vh-100 {
      height: inherit;
      padding-top: 5em;
      padding-bottom: 5em; } }

.ftco-vh-75 {
  height: 75vh;
  min-height: 700px; }
  @media (max-width: 1199.98px) {
    .ftco-vh-75 {
      min-height: 700px;
      height: inherit;
      padding-top: 5em;
      padding-bottom: 5em; } }

.ftco-tab-nav {
  padding: 0;
  margin: 0;
  display: inline-block !important; }
  @media (max-width: 767.98px) {
    .ftco-tab-nav {
      display: block !important;
      margin-bottom: 10px;
      width: 100% !important; } }
  .ftco-tab-nav li {
    padding: 0;
    margin: 0 5px;
    display: inline-block !important; }
    @media (max-width: 767.98px) {
      .ftco-tab-nav li {
        display: block !important;
        margin-bottom: 10px;
        width: 100% !important; } }
    .ftco-tab-nav li a {
      text-transform: uppercase;
      font-size: 14px;
      letter-spacing: .2em;
      color: #ccc;
      border: 2px solid #ccc;
      border-radius: 0 !important; }
      .ftco-tab-nav li a.active {
        background: none !important;
        color: black !important;
        border: 2px solid #121212; }

.ftco-animate {
  opacity: 0;
  visibility: hidden; }

.bg-primary {
  background: #2f89fc !important; }

.ftco-section .ftco-sub-title {
  font-size: 16px;
  text-transform: uppercase;
  letter-spacing: .5em;
  color: #d4d4d4;
  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-weight: 300; }

.ftco-section .ftco-primary-title {
  margin-top: 0;
  margin-bottom: 30px; }

.media-custom {
  background: #fff; }
/* ... */

